[B]0.9.18[/B]
Plot overlay delay option
Add PVR default widget options
Add PVR landscape text to check for channelname

[B]0.9.17[/B]
Change user rating to star icon
Add option to disable videolyrics Skin Settings > Video / Music OSD > Video Lyrics
Fix pvr timer and record icons
Add option to disable genre names
Fix some music info spacing
Add discart via skin helper to musicinfo

[B]0.9.16[/B]
LEIA - add "see more" widget item
LEIA - fix globalsearch backing panels
LEIA - fix for event log
Change seekbar seeking to a white nib
Fix widget gap bug
Gradient option
Light Opaque colour scheme
Add star rating option to disable in Ratings options

[B]0.9.15[/B]
LEIA - Global Search 8 now skinned
Add widget categories text option (wider categories widget)
Change premiered to year for movies
Rearrange info line so duration is next to end time
Add new sets icon (thanks braz!)

[B]0.9.14[/B]
LEIA - add extrathumbs to images in info dialog
LEIA - fix for duration
Fix bug in postplay nextup showing same thumb
Add play icon to videoinfo extras
No scroll on one page
Fix for mouse on big posters

[B]0.9.13[/B]
Fixes for plot overlay in extended info actor
Update rottentomatoes to fit new RT brand identity
Touchup tmdb icon
Add studio logo to videoinfo
Fix for images/extras showing in plugins
Prefer fanart for landscape widgets toggle
Fix for title length
Change to shadow for volumebar

[B]0.9.12[/B]
LEIA - Fix for scrollbars
LEIA - DialogAddonSettings
LEIA - Change fanart to Leia version
Watched Indicators update
Rearrange skin settings
Add support for Artwork Beef
Add download all option
Add nextaired details

[B]0.9.11[/B]
Add support for AEL metadata
Show seekjump position
Hide content for plotoverlay
Skin Settings > Miscellaneous > Enable / disable ratings
Switch indicators to white for focused

[B]0.9.10[/B]
Hopeful fix for widgets bug
Characterart plus Awards on info
Add slideshow ability in videoinfo
Use plot outline option

[B]0.9.9[/B]