@@ -1,4 +1,5 @@
 [B]0.9.18[/B]
+LEIA - Fix some PVR recording and some infolabels
 Plot overlay delay option
 Add PVR default widget options
 Add PVR landscape text to check for channelname
